--- a/HelloFlask/templates/hello.html
+++ b/HelloFlask/templates/hello.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html> 
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>My Web</title>>
-</head>
-<body>
-<h1>Hello,{{ user }}!</h1>
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}My Web - Index{% endblock %}{% block page_content %}
+<div class="page-header">
+    <h1>Hello, {{ user }}!</h1>
+</div> 
+{% endblock %}
