--- a/HelloFlask/templates/base.html
+++ b/HelloFlask/templates/base.html
@@ -1,6 +1,17 @@
 {% extends "bootstrap/base.html" %} 
 
-{% block title %}My Web{% endblock %}{% block navbar %}
+<head>
+{% block head%}
+    {{ super() }}
+    <meta charset="utf-8">
+    <title>
+    {% block title %}My Web{% endblock %}
+    </title>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico')}}">
+{% endblock %}
+</head>
+
+{% block navbar %}
 <div class="navbar navbar-default navbar-static-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -18,16 +29,6 @@
             </div>
         </div>
     </div>
-    <head>
-        {% block head%}
-            {{ super() }}
-            <meta charset="utf-8">
-            <title>
-            {% block title %}My Web{% endblock %}
-            </title>
-            <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico')}}">
-        {% endblock %}
-        </head>
 {% endblock %}{% block content %}
 <div class="container">
     {% block page_content %}{% endblock %}
