--- a/HelloFlask/templates/upload.html
+++ b/HelloFlask/templates/upload.html
@@ -1,13 +1,18 @@
 {% extends "base.html" %}
-{% block title %}My Web - Index{% endblock %}
+
+{% import "bootstrap/wtf.html" as wtf %}
+
+{% block title %}My Web - Upload{% endblock %}
+
 {% block page_content %}
+
+{{ wtf.quick_form(form) }}
+
 {% for message in get_flashed_messages() %}
  <div class="alert alert-warning">
      <button type="button" class="close" data-dismiss="alert">&times;</button>
      {{ message }}
  </div>
 {% endfor %}
-<div class="page-header">
-    <h1>Hello, {{ user }}!</h1>
-</div>
-{% endblock %}
+
+{% endblock %}    
